blur.tv movies v3

--- a/asstes/css/style-section.css
+++ b/asstes/css/style-section.css
@@ -115,8 +115,14 @@ nav .item-nav li a{
 	color: var(--darkMode);
 }
 nav .item-nav li:hover  {
+	height: 23px;
+}
+nav .item-nav li:hover .hvr {
 	border-bottom: 3px solid var(--color-yellow);
 	color: var(--darkMode);
+}
+.activeNavBar{
+	height: 200px;
 }
 .activeNavBar{
 	border-bottom: 3px solid #94ff52;
@@ -131,7 +137,7 @@ nav .item-nav li:hover .dropdownList {
 .item-nav li .dropdownList {
 	transition: all 2s ease-in-out;
     position: absolute;
-    top: 27px;
+    top: 30px;
     left: -17px;
     width: 200px;
 	border-bottom-left-radius: 10px;
@@ -308,6 +314,25 @@ header{
     align-items: center;
 	position: relative;
 }
+/* section View Trailer*/
+#bubbleTrailer {
+	display: none;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(10px);
+    background: var(--color-opacity);
+    color: var(--lightMode);
+    position: fixed;
+    top: 0;
+    right: 0;
+    padding-top: 5%;
+    z-index: 100000;
+}
+.sectionTrailer{
+	width: 100%;
+    margin: auto;
+}
+/* filter search */
 .btn-group{
 	margin: auto;
 }
@@ -499,10 +524,10 @@ header li a{
     margin: auto;
     box-shadow: inset 4px 4px 6px rgb(28 29 2 / 90%), 1px 3px 9px rgb(220 226 45 / 40%);
 }
-.detailsCards .boxTrailer{
-	display: flex;
+.detailsCards .boxTrailer {
+    display: flex;
     width: 100%;
-    margin-top: 25px;
+    margin-top: 8px;
     justify-content: space-between;
 }
 .detailsCards .boxTrailer .btntype{
@@ -765,7 +790,6 @@ header li a{
 
 
 
-
 /*==============================
 	Responsive
 ==============================*/
@@ -837,6 +861,12 @@ header li a{
 	.content .boxImgs .titlefilm {
 		font-size: 13px;
 		top: 252px;
+		font-weight: bold;
+		margin-left: 0;
+	}
+	.content .boxImgs:hover .titlefilm {
+		top: 266px;
+		transition: all .5s ease;
 	}
 	/* detailsCards */
 	.boxImgs .detailsCards{
@@ -860,62 +890,13 @@ header li a{
 
 }
 @media (max-width: 600px) {
-/*==============================
-Header
-==============================*/
-
-header .btn-outline-light{
+	/*==============================
+	Header
+	==============================*/
+	header .btn-outline-light{
 	min-width: 150px;
-	border-radius:  50px;
-	border: 1px solid var(--color-underline);
-	color: var(--darkMode);
-}
-header .dropdown-item{
-	color: #EEE !important;
-}
-.dropdown-menu.show {
-    background: #192031;
-    border-bottom: 3px solid rgb(114 114 173) !important;
-	max-height: 300px;
-	overflow: scroll;
-}
-header li a{
-	padding: 8px 35px 8px 15px !important;
-}
-/* Ranges */
-
-.ranges {
-	width: 100%;
-    display: inline-flex;
-    align-items: center;
-	margin: auto;
-  }
-  #rangeValue {
-	font-size: 2.2em;
-    color: #999;
-    font-weight: 600;
-  }
-  .range {
-	margin: 0 10px;
-    width: 154px;
-    height: 12px;
-    background: #111;
-    outline: none;
-    border-radius: 15px;
-    overflow: hidden;
-    box-shadow: inset 0 0 5px rgba(0, 0, 0, 1);
-    -webkit-appearance: none;
-  }
-  .range::-webkit-slider-thumb {
-	-webkit-appearance: none;
-	width: 15px;
-	height: 15px;
-	border-radius: 50%;
-	background: #00fd0a;
-	cursor: pointer;
-	border: 4px solid #333;
-	box-shadow: -407px 0 0 400px #00fd0a;
-  }
+	margin-bottom: 10px;
+	}
 }
 @media (max-width: 430px) {
 	.d-none-590{
@@ -927,7 +908,7 @@ header li a{
 	}
 		
 	.titleSections h3{
-		font-size: 25px;
+		font-size: 23px;
 	}	
 	.titleSections{
 		justify-content: center;
@@ -942,7 +923,7 @@ header li a{
 	}
 	
 }
-  
+
 /*==============================
 	Loading
 ==============================*/
