--- a/asstes/css/style-section.css
+++ b/asstes/css/style-section.css
@@ -830,8 +830,8 @@ header li a{
 	.content .boxImgs .itemsCard{
 		position: absolute;
 		border-radius: 10px;
-		width: 170px;
-		height: 270px;
+		width: 200px;
+		height: 300px;
 		backdrop-filter: blur(5px);
 		background: linear-gradient(45deg, rgba(0,0,0,0) 0%, rgba(23,42,122,0.499124649859944) 38%, rgba(17, 27, 95, 0.764) 71%);
 		transition: all .3s ease-in-out;
@@ -847,8 +847,8 @@ header li a{
 	.content .boxImgs .itemsCard .Img{
 		transition: all .3s ease-in;
 		border-radius: 10px;
-		width: 170px;
-		height: 270px;
+		width: 200px;
+		height: 300px;
 	}
 	.content .boxImgs:hover .Img{
 		transform: scale(0.9);
@@ -860,23 +860,26 @@ header li a{
 	}
 	.content .boxImgs .titlefilm {
 		font-size: 13px;
-		top: 252px;
+		top: 260px;
+		text-align: center;
 		font-weight: bold;
 		margin-left: 0;
 	}
 	.content .boxImgs:hover .titlefilm {
-		top: 266px;
+		top: 280px;
 		transition: all .5s ease;
 	}
 	/* detailsCards */
 	.boxImgs .detailsCards{
-		top: -5px;
-    	left: -14px;
+		top: 0;
+    	left: 0;
 		height: 245px!important;
 	}
 	.boxImgs:hover .overlaycards {
 		backdrop-filter: blur(5px);
 		background: linear-gradient(45deg, rgba(0,0,0,0) 0%, rgba(23,42,122,0.499124649859944) 38%, rgba(17, 27, 95, 0.764) 71%);
+		width: 200px;
+		height: 300px;
 	}
 	
 }
@@ -886,6 +889,12 @@ header li a{
 	}
 	.d-inline-block-740{
 		display: inline-block!important;
+	}
+	.container-custom{
+		padding-right: 15px;
+		padding-left: 15px;
+		margin-right: auto;
+		margin-left: auto;
 	}
 
 }
