--- a/asstes/css/style-section.css
+++ b/asstes/css/style-section.css
@@ -70,13 +70,12 @@ html,body{
 /*==============================
 Navbar
 ==============================*/
-	nav {
-	width: 100%;
-	height: 70px;
-	background: var(--color-blue2);
-	padding-top: 10px;
-	transition: all 1s;
-	
+nav {
+width: 100%;
+height: 70px;
+background: var(--color-blue2);
+padding-top: 10px;
+transition: all 1s;
 }
 nav .container-custom{
 	display: flex;
@@ -395,10 +394,10 @@ header li a{
 	width: 15px;
 	height: 15px;
 	border-radius: 50%;
-	background: #00fd0a;
+	background: yellow;
 	cursor: pointer;
 	border: 4px solid #333;
-	box-shadow: -407px 0 0 400px #00fd0a;
+	box-shadow: -407px 0 0 400px yellow;
   }
   
 /*...... End Header .......*/
